<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context="cn.com.timemachine.ui.activity.SettingActivity">
    <include layout="@layout/toolbar_item"/>
    <cn.com.timemachine.view.supertextview.SuperTextView
        android:id="@+id/super_location"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:sLeftTextString="@string/My_location"
        app:sLeftTextSize="@dimen/Info_RightSize"
        app:sLeftTextColor="@color/text_black_color"
        app:sRightIconHeight="12dp"
        app:sRightIconWidth="12dp"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        app:sThumbResource="@drawable/thumb"
        app:sTrackResource="@drawable/track"
        app:sRightTextColor="@color/gay_text"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_desc"
        />
    <cn.com.timemachine.view.supertextview.SuperTextView
        android:id="@+id/super_about"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:sLeftTextString="@string/About"
        app:sLeftTextSize="@dimen/Info_RightSize"
        app:sLeftTextColor="@color/text_black_color"
        app:sRightIconHeight="15dp"
        app:sRightIconWidth="15dp"
        app:sRightTextString="2"
        app:sRightTextBackground="@drawable/shape_cycle_rectangle"
        app:sRightIconRes="@mipmap/iv_user_right"
        app:sRightViewMarginRight="1dp"
        app:sRightTextSize="18sp"
        app:sRightTextColor="@color/white"
        />
    <cn.com.timemachine.view.supertextview.SuperTextView
        android:id="@+id/super_quit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:sLeftTextString="@string/Quit"
        app:sLeftTextSize="@dimen/Info_RightSize"
        app:sLeftTextColor="@color/text_black_color"
        app:sRightIconHeight="15dp"
        app:sRightIconWidth="15dp"
        app:sRightIconRes="@mipmap/iv_user_right"
        app:sRightViewMarginRight="1dp"
        app:sRightTextSize="@dimen/Info_LeftSize"
        app:sRightTextColor="@color/gay_text"
        />
</LinearLayout>
