<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.com.timemachine.ui.activity.EditInforActivity">
    <include layout="@layout/toolbar_item"/>
    <ScrollView
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_header"
                app:sLeftTextColor="@color/text_black_color"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTvDrawableRight="@mipmap/iv_logo"
                app:sRightTvDrawableHeight="35dp"
                app:sRightTvDrawableWidth="35dp"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_nick"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightTextString="请选择"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_name"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextString="请选择"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_sex"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextString="请选择"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_birthday"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightTextString="请选择"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_city"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextString="请选择"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_label"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="12dp"
                app:sRightIconWidth="12dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"

                app:sRightTextString="贴上标签，让别人更容易找到你"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
            <cn.com.timemachine.view.supertextview.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/user_desc"
                app:sLeftTextSize="@dimen/Info_RightSize"
                app:sLeftTextColor="@color/text_black_color"
                app:sRightIconHeight="15dp"
                app:sRightIconWidth="15dp"
                app:sRightIconRes="@mipmap/iv_user_right"
                app:sRightViewMarginRight="1dp"
                app:sRightTextString="聊聊你的时光机！"
                app:sRightTextSize="@dimen/Info_LeftSize"
                app:sRightTextColor="@color/gay_text"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
