<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="130dp"
            android:id="@+id/user_nick"
            android:textSize="18sp"
            android:textColor="@color/text_black_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_bg"
            android:clickable="true"
            android:orientation="vertical"
            android:foreground="?android:attr/selectableItemBackground"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/home_text_color"
                android:text="@string/school"/>
            <LinearLayout
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <cn.com.timemachine.view.supertextview.SuperButton
                        android:id="@+id/super_lable1"
                        app:sSolidColor="@color/label_one"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        app:sCornersRadius="5dp"
                        android:textColor="@color/white"
                        android:paddingLeft="13dp"
                        android:textSize="13sp"
                        android:paddingRight="13dp"
                        android:drawablePadding="10dp"
                        android:text="@string/label_one"
                        />
                    <cn.com.timemachine.view.supertextview.SuperButton
                        android:id="@+id/super_lable2"
                        app:sSolidColor="@color/label_two"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        app:sCornersRadius="5dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/white"
                        android:paddingLeft="13dp"
                        android:textSize="13sp"
                        android:paddingRight="13dp"
                        android:drawablePadding="10dp"
                        android:text="@string/label_two"
                        />
                    <cn.com.timemachine.view.supertextview.SuperButton
                        android:id="@+id/super_lable3"
                        app:sSolidColor="@color/label_three"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:layout_marginLeft="10dp"
                        app:sCornersRadius="5dp"
                        android:textColor="@color/white"
                        android:paddingLeft="13dp"
                        android:textSize="13sp"
                        android:paddingRight="13dp"
                        android:drawablePadding="10dp"
                        android:text="@string/label_three"
                        />
                </LinearLayout>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/text_color"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example"
                    android:textColor="@color/text_color"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="0.9km"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@mipmap/iv_location"/>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attention"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@mipmap/iv_blue_heart"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <cn.com.timemachine.view.supertextview.SuperButton
                            android:id="@+id/super_order"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="right"
                            app:sSolidColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            app:sCornersRadius="5dp"
                            android:textColor="@color/white"
                            android:paddingLeft="15dp"
                            android:textSize="16sp"
                            android:paddingRight="15dp"
                            android:text="@string/order"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:background="@drawable/home_bg"
        android:layout_width="100dp"
        android:layout_height="100dp">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/circularImage1"
            android:layout_centerInParent="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:siBorderWidth="4dp"
            android:src="@mipmap/header"
            app:siBorderColor="@color/white"
            />
    </RelativeLayout>

</RelativeLayout>