<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg"
    android:fillViewport="true"
    tools:context="cn.com.timemachine.ui.activity.OtherCenterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp">
            <ImageView
                android:id="@+id/bv_dynamic_blur"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent" />

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/circularImage"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/header"
                app:siBorderWidth="2dp"
                app:siBorderColor="@color/white"/>
            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/circularImage"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/app_name"/>
            <TextView
                android:id="@+id/tv_schoolName"
                android:layout_below="@id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:maxLines="1"
                android:text="清华大学-计算机系"/>
            <cn.com.timemachine.view.supertextview.SuperButton
                android:id="@+id/super_like"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#FFF4F4F4"
                android:layout_below="@id/tv_schoolName"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:drawableLeft="@mipmap/iv_head"
                app:sCornersRadius="20dp"
                android:textColor="@color/text_color"
                android:paddingLeft="13dp"
                android:textSize="16sp"
                android:paddingRight="13dp"
                android:drawablePadding="10dp"
                android:text="关注"
                />
        </RelativeLayout>
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <View
                android:id="@+id/view_lion"
                android:layout_centerInParent="true"
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="#FFF4F4F4"
                />
            <RelativeLayout
                android:id="@+id/layout_receive"
                android:layout_toLeftOf="@id/view_lion"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_centerVertical="true"
                        android:id="@+id/iv_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/iv_light"/>
                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/iv_image"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/iv_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gay_text"
                            android:textSize="14sp"
                            android:text="收到阳光"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/sun_text"
                            android:textSize="@dimen/text_16sp"
                            android:text="3000"/>
                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_send"
                android:layout_toRightOf="@id/view_lion"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_centerVertical="true"
                        android:id="@+id/iv_image2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/iv_sun"/>
                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/iv_image2"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/iv_tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gay_text"
                            android:textSize="14sp"
                            android:text="散出阳光"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/sun_text"
                            android:textSize="@dimen/text_16sp"
                            android:text="3000"/>
                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
        <cn.com.timemachine.view.supertextview.SuperTextView
            android:id="@+id/super_stage"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:sLeftTextString="@string/stage"
            app:sLeftTextColor="@color/text_black_color"
            app:sLeftTextSize="16sp"
            app:sLeftViewMarginLeft="15dp"
            app:sRightViewMarginRight="20dp"
            app:sRightTextString="小学生"
            android:layout_height="60dp">
        </cn.com.timemachine.view.supertextview.SuperTextView>
        <cn.com.timemachine.view.supertextview.SuperTextView
            android:id="@+id/super_learnTime"
            android:layout_width="match_parent"
            app:sLeftTextString="@string/learn_fromTime"
            app:sLeftTextColor="@color/text_black_color"
            app:sLeftTextSize="16sp"
            app:sLeftViewMarginLeft="15dp"
            app:sRightViewMarginRight="20dp"
            app:sRightTextString="2016年"
            android:layout_height="60dp">
        </cn.com.timemachine.view.supertextview.SuperTextView>
        <cn.com.timemachine.view.supertextview.SuperTextView
            android:id="@+id/super_oath"
            android:layout_width="match_parent"
            app:sLeftTextString="@string/oath"
            app:sLeftTextColor="@color/text_black_color"
            app:sLeftTextSize="16sp"
            app:sLeftViewMarginLeft="15dp"
            app:sCenterViewMarginLeft="20dp"
            app:sRightMaxEms="14"
            app:sCenterTvDrawableWidth="30dp"
            app:sRightIconRes="@mipmap/iv_black_right"
            app:sRightIconWidth="10dp"
            app:sRightIconHeight="13dp"
            app:sCenterViewGravity="right_center"
            app:sRightLines="2"
            app:sRightTextString="从前有座山，山里有座庙，庙里有个和尚叫唠叨，从前有座…"
            android:layout_height="60dp">
        </cn.com.timemachine.view.supertextview.SuperTextView>
        <cn.com.timemachine.view.supertextview.SuperTextView
            android:id="@+id/super_time"
            android:layout_width="match_parent"
            app:sLeftTextString="@string/other_time"
            app:sLeftViewMarginLeft="15dp"
            app:sLeftTextColor="@color/text_black_color"
            app:sLeftTextSize="16sp"
            app:sCenterLines="2"
            app:sRightIconWidth="10dp"
            app:sRightIconHeight="13dp"
            app:sCenterViewGravity="right_center"
            app:sRightIconRes="@mipmap/iv_black_right"
            app:sRightTextString="关于HTTP协议，一篇就够了"
            android:layout_height="60dp">
        </cn.com.timemachine.view.supertextview.SuperTextView>
        <LinearLayout
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/view"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@color/text_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label"/>
            <cn.com.timemachine.view.tag.view.AutoWrapLineLayout
                android:id="@+id/usual_tags_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
